[package]
name = "planck_game_features"
version = "0.1.0"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
description = "Integrates game_features with the planck_ecs library."
keywords = ["game", "ecs"]
categories = ["game-engines"]
license = "Apache-2.0"
exclude = ["doc"]
repository = "https://github.com/jojolepro/planck_game_features/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
planck_ecs = "1.2.0"
planck_ecs_bundle = "1.1.0"
game_features = "0.8.1"
game_clock = "1.1.1"
